--- a/src/Books-API.Infrastructure/Books-API.Infrastructure.csproj
+++ b/src/Books-API.Infrastructure/Books-API.Infrastructure.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Books-API.Core\Books-API.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Books_API.Infrastructure</RootNamespace>
