--- a/src/Books-API.Presentation/appsettings.json
+++ b/src/Books-API.Presentation/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDb" : "mongodb://localhost:27017"
 }
