Add controllers mapping

--- a/src/Books-API.Presentation/appsettings.json
+++ b/src/Books-API.Presentation/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "MongoDb" : "mongodb://localhost:27017"
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://localhost:27017"
+  }
 }
