--- a/src/Books-API.Presentation/appsettings.Development.json
+++ b/src/Books-API.Presentation/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "MongoDb" : "mongodb://localhost:27017"
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://localhost:27017"
+  }
 }
